--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,41 @@
 {
-  "short_name": "Map of France",
+  "dir": "ltr",
+  "lang": "de",
+  "short_name": "Map France",
   "name": "Map of France",
+  "scope": "/",
+  "theme_color": "#0047ab",
+  "description": "Map of France to promote tourism and Sustainable Local Heritage Development, with points of interest and PDO regions",
+  "orientation": "any",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+        "src": "favicon-32x32.png",
+        "type": "image/png",
+        "sizes": "32x32"
+    },
+    {
+        "src": "ico/apple-icon.png",
+        "type": "image/png",
+        "sizes": "192x192"
+    },
+    {
+        "src": "ico/apple-icon-152x152.png",
+        "sizes": "152x152",
+        "type": "image/png"
+    },
+    {
+        "src": "ico/apple-icon-180x180.png",
+        "sizes": "180x180",
+        "type": "image/png"
+    },
+    {
+        "src": "ico/apple-icon-precomposed.png",
+        "sizes": "192x192",
+        "type": "image/png"
     }
-  ],
+],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  
 }
