Add icons and correct manifest.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "MapOfFrance",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://sheub.github.io/MapOfFrance",
