--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MapOfFrance",
+  "name": "mapoffrance",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://sheub.github.io/MapOfFrance",
@@ -25,5 +25,21 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
+  },
+  "jest": {
+    "collectCoverageFrom" : [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": ["text"],
+    "snapshotSerializers": ["react-test-renderer"]
   }
 }
