Set Faconnes icon and colours Set list collapsible

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "jest": {
     "collectCoverageFrom" : [
-      "src/**/*.{js,jsx}",
+      "src/*.{js,jsx}",
       "!<rootDir>/node_modules/"
     ],
     "coverageThreshold": {
