--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,3 +7,4 @@ build:
             tests:
                 override:
                     - js-scrutinizer-run
+                    - jsx-scrutinizer-run
