--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,6 +32,11 @@
         "src": "ico/apple-icon-precomposed.png",
         "sizes": "192x192",
         "type": "image/png"
+    },
+    {
+        "src": "ico/tile310x310.png",
+        "sizes": "558x558",
+        "type": "image/png"
     }
 ],
   "start_url": "./index.html",
