--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "homepage": "http://sheub.github.io/MapOfFrance",
   "dependencies": {
-    "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "^2.0.0",
+    "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
+    "jest-cli": "^23.5.0",
     "mapbox-gl": "^0.47.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-map-gl": "^3.3.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-map-gl": "^3.3.4",
+    "react-map-gl-alt": "^0.6.0",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.2",
     "react-text-truncate": "^0.13.1",
     "react-truncate": "^2.3.0",
     "react-virtualized": "^9.20.1"
@@ -27,7 +30,7 @@
     "gh-pages": "^1.2.0"
   },
   "jest": {
-    "collectCoverageFrom" : [
+    "collectCoverageFrom": [
       "src/*.{js,jsx}",
       "!<rootDir>/node_modules/"
     ],
@@ -39,7 +42,11 @@
         "statements": 90
       }
     },
-    "coverageReporters": ["text"],
-    "snapshotSerializers": ["react-test-renderer"]
+    "coverageReporters": [
+      "text"
+    ],
+    "snapshotSerializers": [
+      "react-test-renderer"
+    ]
   }
 }
