--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "homepage": "http://sheub.github.io/MapOfFrance",
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
-    "@material-ui/icons": "^2.0.1",
+    "@material-ui/core": "^1.5.0",
+    "@material-ui/icons": "^2.0.2",
     "jest-cli": "^23.5.0",
     "mapbox-gl": "^0.47.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-map-gl": "^3.3.4",
     "react-map-gl-alt": "^0.6.0",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.2",
@@ -20,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+	"build": "react-scripts build && rm -rf ./node_modules/@mapbox/mapbox-gl-style-spec",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
